external-crates/move/crates/move-compiler/tests/move_check/unit_test/other_failures_invalid_assignment@unit_test.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09001]: unused alias
  ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:6:14
  │
6 │     use 0x1::n;
  │              ^ Unused 'use' of alias 'n'. Consider removing it
  │
  = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

warning[W10007]: issue with attribute value
  ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:9:24
  │
9 │     #[expected_failure(vector_error=0, location=std::vector)]
  │                        ^^^^^^^^^^^^^^ Unused attribute for 'expected_failure'

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:13:51
   │
13 │     #[expected_failure(vector_error, minor_status=x"", location=std::vector)]
   │                                                   ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:17:24
   │
17 │     #[expected_failure(arithmetic_error=@0, location=n)]
   │                        ^^^^^^^^^^^^^^^^^^^ Unused attribute for 'expected_failure'

warning[W10007]: issue with attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:21:24
   │
21 │     #[expected_failure(out_of_gas=bool, location=Self)]
   │                        ^^^^^^^^^^^^^^^ Unused attribute for 'expected_failure'

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:25:37
   │
25 │     #[expected_failure(major_status=4004u128, location=Self)]
   │                                     ^^^^^^^^ Expected abort code must be a u64

error[E10003]: invalid attribute value
   ┌─ tests/move_check/unit_test/other_failures_invalid_assignment.move:29:56
   │
29 │     #[expected_failure(major_status=4016, minor_status=b"", location=Self)]
   │                                                        ^^^ Invalid value in attribute assignment
   │
   = Expected a u64 literal or named constant
